@@ -1,3 +1,7 @@
+v040
+  - recognize and convert calibre:title_sort to its epub3 equivalent
+  - update 48x48 quicklaunch plugin to enhance readability
+
 v039
   - recognize and convert calibre:series and calibre:series_index to their epub3 equivalents
   - added simple 48x48 plugin.png icon for use in Sigil QuickLaunch Toolbar icons
